--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.4
+  uuid: ^4.5.1
+  fluttertoast: ^8.2.8
+  cloudinary_flutter: ^1.0.0
+  cloudinary_url_gen: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
