--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,7 @@ app.*.symbols
 
 # Obfuscation related
 app.*.map.json
-
+/assets/.env
 # Android Studio will place build artifacts here
 /android/app/debug
 /android/app/profile
