--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: quiz_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -42,9 +42,8 @@ dependencies:
   image_picker: ^1.1.2
   file_picker: ^5.0.0
   path_provider: ^2.0.15
-  cloudinary_public: ^0.23.1  # Add Cloudinary package
+  cloudinary_public: ^0.23.1 # Add Cloudinary package
   firebase_storage: ^12.3.7
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -66,7 +65,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -77,6 +75,9 @@ flutter:
     - assets/.env
     - assets/background.jpg
     - assets/manage.jpg
+    - assets/top1.png
+    - assets/top2.png
+    - assets/top3.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
